fix: new better .alignwide, .alignfull support

--- a/assets/src/css/brisko.css
+++ b/assets/src/css/brisko.css
@@ -101,7 +101,7 @@ pre {
     grid-gap: 1.5em;
 }
 
-.alignwide, .alignfull {
+.alignfull {
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     max-width: 100vw;
@@ -110,11 +110,23 @@ pre {
 }
 
 .alignwide {
-    max-width: var(--wp--style--global--wide-size);
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    /*max-width: var(--wp--style--global--wide-size);*/
+    max-width: 90vw;
+    margin-left: calc(50% - 39vw);
+    margin-right: calc(50% - 39vw);
 }
+
+/*.editor-content > *:not(.alignfull) {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.editor-content > *:not(.alignfull).alignwide {
+  max-width: 1400px;
+}*/
+
 
 /*--------------------------------------------------------------
  # Navigation
